# slides

./: .editorconfig  .gitattributes  .gitignore  README.md  outline.md
03-kitties/: README.md
03-kitties/frontend/src/: App.js  KittyCards.js
03-kitties/frontend/src/config/: types.json
03-kitties/substrate/: Cargo.toml
03-kitties/substrate/node/: Cargo.toml
03-kitties/substrate/pallets/kitties/src/: link.rs
03-kitties/substrate/pallets/template/: Cargo.toml
03-kitties/substrate/runtime/src/: lib.rs
03_polkadot-js-api/: README.md  course-notes.md
03_polkadot-js-api/kitties/: README.md
03_polkadot-js-api/kitties/frontend/src/: AccountSelector.js  App.js  Balances.js  Kitties.js  KittyAvatar.js  KittyCards.js  Metadata.js  NodeInfo.js  index.js
03_polkadot-js-api/kitties/frontend/src/__tests__/: App.js
03_polkadot-js-api/kitties/frontend/src/config/: index.js  types.json
03_polkadot-js-api/kitties/frontend/src/substrate-lib/: SubstrateContext.js
03_polkadot-js-api/kitties/substrate/pallets/kitties/: Cargo.toml
03_polkadot-js-api/kitties/substrate/runtime/src/: lib.rs
04-ocw/: README.md
04-ocw/lecture-demo/pallets/ocw-demo/: Cargo.toml
04-ocw/lecture-demo/pallets/ocw-demo/src/: lib.rs  tests.rs
04-ocw/lecture-demo/runtime/: Cargo.toml
04-ocw/lecture-demo/runtime/src/: lib.rs
04-ocw/ocw-example/: README.md
04-ocw/ocw-example/node/: Cargo.toml
04-ocw/ocw-example/node/src/: service.rs
04-ocw/ocw-example/pallets/ocw/: Cargo.toml
04-ocw/ocw-example/pallets/ocw/src/: lib.rs
04-ocw/ocw-example/pallets/template/: Cargo.toml
04-ocw/ocw-example/runtime/: Cargo.toml
04-ocw/ocw-example/runtime/src/: lib.rs
06-polkadot-js-app-api/js-component/: index.js
advanced/term-01/lesson11/: Lesson11指令.md
advanced/term-02/03-kitties/: lecture-notes.md
advanced/term-03/03_polkadot-js-api/: course-notes.md
advanced/term-03/03_polkadot-js-api/js-component/: index.js  package.json
lesson11/web3example/: balances.js  package-lock.json  package.json  tx.js
primer/term-01/lesson6/: assignment.txt
primer/term-05/06-polkadot-js-app-api/: README.md
primer/term-05/06-polkadot-js-app-api/js-component/: package.json
(+22 files in other folders)
